cmake_minimum_required(VERSION 3.30)
project(Comparacion C)

add_executable(1_Bubblesort 1_Bubblesort.c)
add_executable(2_Quicksort 2_Quicksort.c)
add_executable(3_Insertionsort 3_Insertionsort.c)
add_executable(4_Shellsort 4_Shellsort.c)
add_executable(5_Comparacion_de_algoritmos 5_Comparacion_de_algoritmos.c)
